--- a/CIM/CIM/CIM.csproj
+++ b/CIM/CIM/CIM.csproj
@@ -14,4 +14,8 @@
     </PackageReference>
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="RouteConstraints\" />
+  </ItemGroup>
+
 </Project>
