implement dell api and database backup

--- a/CIM/package.json
+++ b/CIM/package.json
@@ -1,5 +1,8 @@
 {
     "scripts": {
-      "dev": "concurrently \"cd nodeserver && nodemon start\" \"cd reactfrontend && npm run dev\""
+        "dev": "concurrently \"cd nodeserver && nodemon start\" \"cd reactfrontend && npm run dev\""
+    },
+    "dependencies": {
+        "csv-parse": "^5.4.0"
     }
-  }
+}
