--- a/CIM/nodeserver/package.json
+++ b/CIM/nodeserver/package.json
@@ -13,6 +13,7 @@
     "csv-parser": "^3.0.0",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "mysql2": "^3.3.3",
     "nodemon": "^2.0.22",
     "sequelize": "^6.31.1"
   }
