--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "concurrently": "^8.0.1",
     "dotenv": "^16.0.3",
+    "express": "npm:Express@^3.0.1",
     "Express": "^3.0.1",
     "mysql2": "^3.3.1",
     "sequelize": "^6.31.1",
